dev/argocd/resources/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "178.104.84.100"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - argocd-dev.easysolution.work
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
